# EAR

./: .clang-format  .clang-format-ignore  .gitignore  .gitlab-ci.yml  AUTHORS  CHANGELOG.md  COPYING  HOWTO_versions.txt  Makefile.cp  Makefile.exports  Makefile.in  README.md  README_research.md  configure.ac  deployment.sh  doxygen.conf
.gitlab/issue_templates/: bug.md  feature.md
.gitlab/merge_request_templates/: template.md
doc/: Makefile
doc/ear3.2/: ._EAR3.1.html
doc/html/: ._ear3.2.html  ear3.2.html  ear3.3.html  ear4.0.html  ear4.1.html
doc/html/ear-4.3.1/: navtreedata.js  pages.html  (+1 more)
doc/man/: eacct.1  ear_create_database.1  econtrol.1  ereport.1
doc/templates/: doxygen.conf  header.tex
etc/: Makefile
etc/conf/: ear.conf.full.template  ear.conf.full.template.in  ear.conf.template  ear.conf.template.in  edcmon.template.conf
etc/examples/: Makefile  ear_api.c  ear_deploy.arm.neo.lenox.gcc.sh  ear_deploy.arm.neo.v2.gcc.sh  ear_deploy.arm.neo.v2.gcc.thea.sh  ear_deploy.daint.sh  ear_deploy.lenox.spr8462Yp.template.sh  ear_deploy.lenox.template.sh  ear_deploy.mn5.template.sh  ear_deploy.snellius.template.amd.sh  ear_deploy.snellius.template.intel.sh  ear_deploy.template.sh  earl_options.sh  start_nodes.sh  stop_nodes.sh
etc/module/: ear-debug  ear-lite.in  ear-sing  ear-sing.in  ear.in
etc/msr_safe/: amd17  intel63
etc/release/: get_latest_tag_changelog.py
etc/rpms/: rpmbuild.sh.in  rpmbuild.sh~
etc/slurm/: ear.plugstack.conf.in
etc/systemd/: README.md  eard.service.in  eardbd.service.in  eargmd.service.in  edcmon.service  edcmon.service.in
m4/: ac_cmocka.m4  ac_countdown.m4  ac_cuda.m4  ac_cupti.m4  ac_curl.m4  ac_dlb.m4  ac_freeipmi.m4  ac_gsl.m4  ac_jansson.m4  ac_likwid.m4  ac_microhttpd.m4  ac_mysql.m4  ac_oar.m4  ac_oneapi.m4  ac_pbs.m4  ac_pgsql.m4  ac_redfish.m4  ac_rsmi.m4  ac_slurm.m4  ax_architectures.m4  ax_compare_version.m4  ax_defaults.m4  ax_features.m4  ax_helper_functions.m4  ax_post_opt_features.m4  ax_pre_opt_features.m4  x_ac_gsl.m4  x_ac_mysql.m4  x_ac_oar.m4  x_ac_papi.m4  x_ac_pgsql.m4  x_ac_slurm.m4
m4/unused/: ac_slurm.m4  x_ac_mpi.m4  x_ac_papi.m4
src/: AUTHORS  CHANGELOG.md  Makefile  Makefile.depend  Makefile.extra  Makefile.in  README.md  configure.ac
src/commands/: .depend  Makefile  ear-info.c  ear_acct.c  ear_acct_auxiliary.h  ear_clean_apps.c  ear_clean_pm.c  ear_cleandb.c  ear_control.c  ear_create_database.c  ear_report.c  query_helpers.c  query_helpers.h
src/common/: .depend  Makefile  Makefile.files  README.md  attributes.h  colors.h  config.h  environment.c  environment.h  environment_common.c  environment_common.h  includes.h  math_operations.c  math_operations.h  monitor.c  monitor.h  plugins.h  rules.c  rules.h  sizes.h  states.h  string_enhanced.c  string_enhanced.h  types.h
src/daemon/: .depend  Makefile  README.md  app_mgt.c  app_mgt.h  common.c  common.h  dyn_conf_theading.c  dyn_conf_theading.h  dynamic_configuration.c  dynamic_configuration.h  eard.c  eard.h  eard_api.c  eard_api.h  eard_checkpoint.c  eard_checkpoint.h  eard_conf_api.h  eard_conf_rapi.h  eard_constants.h  eard_node_services.c  eard_node_services.h  eard_rapi.c  eard_rapi.h  eard_server_api.c  eard_server_api.h  log_eard.c  log_eard.h  new_status_proposal.h  node_metrics.c  node_metrics.h  power_monitor.c  power_monitor.h  power_monitor_app.h  shared_configuration.c  shared_configuration.h  shared_pmon.c  shared_pmon.h  shared_types.h
src/daemon/app_api/: .depend  Makefile  Makefile.am  app_api.c  app_conf_api.h  app_server_api.c  app_server_api.h  ear.h
src/data_center_monitor/: Makefile  README.md  edcmon  edcmon.c
src/database_cache/: .depend  Makefile  eardbd.c  eardbd.h  eardbd_api.c  eardbd_api.h  eardbd_body.c  eardbd_body.h  eardbd_signals.c  eardbd_signals.h  eardbd_storage.c  eardbd_storage.h  eardbd_sync.c  eardbd_sync.h
src/doc/: Makefile
src/etc/: Makefile
src/etc/rpms/configure/: configure.ac
src/global_manager/: .depend  Makefile  README.md  cluster_energycap.c  cluster_energycap.h  cluster_powercap.c  cluster_powercap.h  eargm.c  eargm_conf_api.h  eargm_ext_rm.c  eargm_ext_rm.h  eargm_rapi.c  eargm_rapi.h  eargm_server_api.c  eargm_server_api.h  log_eargmd.h  meta_eargm.c  meta_eargm.h
src/m4/: ax_post_opt_features.m4  ax_pre_opt_features.m4  x_ac_cuda.m4  x_ac_mpi.m4  x_ac_slurm.m4
src/management/: Makefile  management.c  management.h  test.c  test.h
src/metrics/: Makefile  metrics.c  metrics.h  test.c  test.h
src/pbs_hook/: Makefile  pbs_hook_utils.c  pbs_hook_utils.h  test.c  test.h  tests.c
src/report/: Makefile  cassandra.c  csv.c  csv_ts.c  dcdb.c  dcgmi.c  dummy.c  eard.c  eardbd.c  eardbd.h  examon.c  examon.h  heroes.c  log.c  mpi_node_metrics.c  mpitrace.c  mysql.c  nodesensor_log.c  plug_dummy.c  prometheus.c  psql.c  report.c  report.h  sysfs.c
src/slurm_plugin/: .depend  Makefile  erun.c  erun.h  erun.sh  erun_lock.c  erun_lock.h  erun_signals.c  erun_signals.h  erun_sim.c  slurm_plugin.c  slurm_plugin.h  slurm_plugin_environment.c  slurm_plugin_environment.h  slurm_plugin_options.c  slurm_plugin_options.h  slurm_plugin_rcom.h  slurm_plugin_rcom_eard.c  slurm_plugin_rcom_eargmd.c  slurm_plugin_rcom_shared.c  slurm_plugin_serialization.c  slurm_plugin_serialization.h  slurm_plugin_test.c  slurm_plugin_test.h  spank_interposer.h
src/tests/: .gitignore  Makefile
src/tools/: .depend  Makefile  cluster_ping.c  coeffs_compare.c  coeffs_compute.c  coeffs_default.c  coeffs_jobproj.c  coeffs_null.c  coeffs_power_compute.c  coeffs_quality.c  coeffs_show.c  create_app_csv.py  database_size_calculator.c  earConf_tool.py  ear_conf.c  ear_conf.py  ear_events.c  ear_node_control.c  ear_node_ctl.c  ear_node_info.c  eargm_tool.py  enode_info  get_active_nodes.c  get_ear_events.c  get_periodic.c  groups_test.c  insert_test.c  learning_delete.c  learning_show.c  learning_show.c.new  learning_validate.c  list_folders  list_folders.c  loops_average.c  metrics_show.c  node_manager_info  node_manager_info.c  powercap_test  powercap_test.c  propagation_test.c  (+2 more)
tests/daemon/: Makefile.am
(+932 files in other folders)
